syntax = "proto3";

package gameplay_service;

message UnfollowRequest {
    string userId = 1;
    string followeeUserId = 2;
}